unpackaged/main/default/objects/Payment_Card_Charge__c/Payment_Card_Charge__c.object-meta.xml
<CustomObject>
    <label>Payment Card Charge</label>
    <nameField>
        <displayFormat>PCC-{000000}</displayFormat>
        <label>Payment Card Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Card Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>