unpackaged/main/default/objects/Payment_Card_Charge__c/fields/Amex__c.field-meta.xml
<CustomField>
    <fullName>Amex__c</fullName>
    <label>Amex</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>