unpackaged/main/default/objects/Payment_Card_Charge__c/fields/Chinese_Wallets__c.field-meta.xml
<CustomField>
    <fullName>Chinese_Wallets__c</fullName>
    <label>Chinese Wallets</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>