unpackaged/main/default/objects/Payment_Card_Charge__c/fields/Chinese_Wallets_e_Comm__c.field-meta.xml
<CustomField>
    <fullName>Chinese_Wallets_e_Comm__c</fullName>
    <defaultValue>0.013</defaultValue>
    <label>Chinese Wallets e-Comm</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>