unpackaged/main/default/objects/Payment_Card_Charge__c/fields/Owning_Country__c.field-meta.xml
<CustomField>
    <fullName>Owning_Country__c</fullName>
    <label>Owning Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Owning_Country</valueSetName>
    </valueSet>
</CustomField>