unpackaged/main/default/objects/Payment_Card_Charge__c/fields/UnionPay__c.field-meta.xml
<CustomField>
    <fullName>UnionPay__c</fullName>
    <label>UnionPay</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>