unpackaged/main/default/objects/Payment_Card_Charge__c/fields/Visa_MC_Domestic_EEA__c.field-meta.xml
<CustomField>
    <fullName>Visa_MC_Domestic_EEA__c</fullName>
    <label>Visa/MC Domestic/EEA</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>