unpackaged/main/default/objects/Payment_Card_Charge__c/fields/Visa_MC_Intl__c.field-meta.xml
<CustomField>
    <fullName>Visa_MC_Intl__c</fullName>
    <label>Visa/MC Intl.</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>