unpackaged/main/default/objects/Payment_Card_Charge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Owning_Country__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Visa_MC_Domestic_EEA__c</columns>
    <columns>Visa_MC_Intl__c</columns>
    <columns>Chinese_Wallets__c</columns>
    <columns>Chinese_Wallets_e_Comm__c</columns>
    <columns>UnionPay__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>